<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="false">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.explicitintent.MainActivityOne">


    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="27dp"
        android:minHeight="60dip"
        android:text="@string/display1"
        android:textSize="20sp" />

//name
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter1"
        android:id="@+id/text1"
        android:layout_below="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/edit1"
        android:layout_below="@+id/text1"
        android:layout_toRightOf="@+id/text1"
        android:layout_toEndOf="@+id/text1" />

    //dob

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter2"
        android:id="@+id/text2"
        android:layout_below="@+id/edit1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/text3"
        android:layout_below="@+id/text2"
        android:layout_toRightOf="@+id/text2"
        android:layout_toEndOf="@+id/text2" />


    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:id="@+id/datePicker"
       android:layout_below="@id/text3"
        />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/text4"
    android:layout_below="@id/datePicker"
    android:text="@string/enter3"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit2"
        android:inputType="number"
        android:layout_below="@id/text4"
        android:layout_toRightOf="@id/text4"
        android:layout_toEndOf="@id/text4"/>


    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button1"
        android:minHeight="10dp"
        android:textColor="@color/button"
        android:layout_below="@id/edit2"
        android:layout_marginBottom="72dp"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
</ScrollView>